--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ agp = "8.2.0"
 androidx-appcompat = "1.6.1"
 androidx-activityCompose = "1.8.1"
 compose-uitooling = "1.5.4"
-voyager = "1.0.0"
+voyager = "1.0.0-rc09"
 composeImageLoader = "1.7.1"
 napier = "2.7.0"
 buildConfig = "4.1.1"
@@ -16,6 +16,9 @@ kotlinx-serialization = "1.6.2"
 kotlinx-datetime = "0.5.0"
 multiplatformSettings = "1.1.1"
 koin = "3.5.3"
+supabase = "1.4.7"
+platform = "1.1.1"
+konfig = "0.15.1"
 
 [libraries]
 
@@ -38,6 +41,11 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinx-datetime" }
 multiplatformSettings = { module = "com.russhwolf:multiplatform-settings", version.ref = "multiplatformSettings" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+supabase-postgrest = { module = "io.github.jan-tennert.supabase:postgrest-kt", version.ref = "supabase" }
+supabase-storage = { module = "io.github.jan-tennert.supabase:storage-kt", version.ref = "supabase" }
+supabase-auth = { module = "io.github.jan-tennert.supabase:compose-auth", version.ref = "supabase" }
+platform-settings = { module = "com.russhwolf:multiplatform-settings-no-arg", version.ref = "platform" }
+
 
 [plugins]
 
@@ -46,3 +54,4 @@ compose = { id = "org.jetbrains.compose", version.ref = "compose" }
 android-application = { id = "com.android.application", version.ref = "agp" }
 buildConfig = { id = "com.github.gmazzo.buildconfig", version.ref = "buildConfig" }
 kotlinx-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+konfig = { id = "com.codingfeline.buildkonfig", version.ref = "konfig" }
